--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.6",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.3.30",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.5",
