--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
   "devDependencies": {
