--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.3.30",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.14",
     "zod": "^3.23.8"
   },
